--- a/TODO
+++ b/TODO
@@ -1,22 +1,24 @@
 * Bugs and deficiencies:
 ** Parameter help: cm is shadowed by cmblock
 
-** Highlighting: % and & operators in comments 
-
 ** Completion: Functions are not completed with parenthesis (`sin(')
 
 ** Completion: c*** command is not completed
+    omission in fontification.el: c*** highlighting, harmless?
+
+** Highlighting: % and & operators in comments 
 
 ** M-j: When there is already a `&' in a format command M-j
    inserts a redundant one
 
-** Closing of blocks not working when keyword is not written out
+** Closing of blocks and parameter help is not working when keywords
+   are in fact unambiguous but not written out
 
-** Highlighting: User variable highlighting
+** Highlighting: Experimental user variable highlighting
    does not take into account: a.) a clearing of variables and b.)
    usage of variables before their definitions (uninitialised
-   variables) c.)  the variable fontification might clash with Ansys
-   specifiers d.)  string substitution of %variables% in in strings
+   variables) c.) the variable fontification might clash with Ansys
+   specifiers d.) string substitution of %variables% in in strings
    does not highlight them in the variable font
 
 * v12.0.1:
@@ -25,23 +27,11 @@
 *** features?
 - insert skeleton with C-c C-s i, send line C-c C-c ccc
 *** miscellaneous
-- C-c C-v does not show variable defined in the first line with = 
+- rename *LMUtil buffer to *Ansys-license
 
 - update, restructure -mode-help
 
 - TODOs, FIXMEs in the code
-
-- omission in fontification.el: c*** highlighting, harmless?
-
-- Are characters behind unique commands shorter than 4 characters
-  possible? No
-  /sol(u) sufficient? Yes
-  condensed input line ($) behind commands without arguments possible? Yes
-  have a look in
-  -variable-defining-commands!  Warn when - unintentionally -
-  arguments are used for Ansys commands which do not allow arguments.
-  Or implement some auto-newline feature?  But problematic in
-  condensed command lines or when applying code comments!
 
 - *goto :branch with character labels such as :1 or :_2 possible?
 
@@ -61,7 +51,7 @@ mode-help -- usage & configuration
   update defcustom list in ansys-submit-bug-report
   update version numbers, default names (tags-query-replace 120 130)
   checkdoc
-  then dry run: Emacs 23.1 -Q testing: fontification,padt.mac /*commands
+  then dry run: Emacs 23.1 -Q testing: fontification.mac /*commands
   and default command lines, every menu entry.
   byte-compile-file
   then dry run
@@ -75,12 +65,33 @@ mode-help -- usage & configuration
 - publication emails (with image and news): ANSYS.net (Ansys !!!
   Sheldon Imaoka <sheldonimaoka@yahoo.com>), CadFem (Stephan Gotthold
   sgotthold@cadfem.de, Nelson <tnelson@cadfem.de>, Hanke , Krueger
-  <lkrueger@cadfem.de>), Alwin Perras
-  <alwin.perras@continental-corporation.com>, AnsysWB community, Ansys
-  users club <tom.tumbrink@t-online.de> <admin@auc-ev.de>, the Focus
-  guys (PADT) <info@padtinc.com>, Holger Sparr
-  <sparr@mfkrs1.mw.tu-dresden.de>. Razvan.Curtean@continental-corporation.com
-  <saravana.kumar@continental-corporation.com
+  <lkrueger@cadfem.de>), AnsysWB community, Ansys users club
+  <tom.tumbrink@t-online.de> <admin@auc-ev.de>, the Focus guys (PADT)
+  <info@padtinc.com>, Holger Sparr <sparr@mfkrs1.mw.tu-dresden.de>.
+
+
+  klemens.kieninger@continental-corporation.com,
+  zlakto.penzar@continental-corporation.com,
+  saravana.kumar@continental-corporation.com,
+  razvan.curtean@continental-corporation.com,
+  alwin.perras@continental-corporation.com,
+  sparr@mfkrs1.mw.tu-dresden.de,
+  info@padtinc.com,
+  tom.tumbrink@t-online.de,
+  admin@auc-ev.de,
+  tnelson@cadfem.de,	
+  lkrueger@cadfem.de,
+  sgotthold@cadfem.de,
+  sheldonimaoka@yahoo.com,
+
+Subject: Editor support for working with Ansys
+
+Hi,
+
+finally another release (12.0.1) of Ansys mode, downloadable from
+		 http://code.google.com/p/ansys-mode
+
+
 - Emacs package repository, elpa http://tromey.com/elpa/?
 
 - Emacs installation archive for Ansys under XP, default.el in
@@ -111,6 +122,7 @@ mode-help -- usage & configuration
    ansys completion and emacs expansion C-c ] -- -close-block
    ,commands
    colon loop: e.g.: lfillt,(1:3),(2:4),Rad, lesize,(1:5:2),Esize
+   _return & _status values
    preview insert skeletons (alternatively abbrev mode?)
    display user variables
    *go not for interactive mode! -> *if *else *endif
@@ -139,9 +151,6 @@ Conclusion/Summary?
 
 - documentation in info format, refcard, etc; Emacs help guidelines
   GNU programming guideline: More requires?,
-
-- indicate replacement of standard Emacs facilities (e. g M-C-n,
-  M-C-p, M-h)
   
 - display alternatives to/swap deprecated element types
 
@@ -154,7 +163,8 @@ Conclusion/Summary?
 
 - Provide Ansys command completion and command-help in comint buffer
 
-- trigger a timer when showing the ansys-comand-parameter-help
+- trigger a timer when showing the ansys-comand-parameter-help for
+  switching off the overlay
 
 - Include the _RETURN value of the solid modelling
   commands into their help strings of parameter help.  
@@ -162,11 +172,10 @@ Conclusion/Summary?
 ** Ansys interpreter buffer
    example: gnuplot-mode
 
-- read env, try to ask only for the installation directory for the
-  ansys-license-file, -program, etc.  variables.  Read some
-  information from getenv.  read ansys-license-file from env, supply
-  sane standard Ansys values for the helper programs and check for
-  existance
+- warn when C-c C-c tries to send a block command (complete to full block?)   
+
+- try to ask only for the installation directory for the
+  ansys-license-file, -program, etc.  variables.  
 
 - make filter of -license-status optionally  
 
@@ -210,7 +219,6 @@ Conclusion/Summary?
   lock file before starting a run
 
 ** Skeletons and abbrevs
-
 - make outline string in skeletons configurable
 
 - spider beams, _bolt.mac, screw.mac, Mohr-Coulomb criterion
@@ -243,6 +251,14 @@ Conclusion/Summary?
   must *go:label be unambiguous?
 
 ** Miscellaneous
+- add notes for parameter help of undocumented commands (alist)
+
+- create filter variable for hiding not installed license types
+  ("aiiges" "aihexa") or better regexp filter "ai.*\\|acf.*"
+
+- commands shorter than 4 chars are not allowed with additional chars
+  adjust this to -highlighting-level 0
+
 - search in -job for /filn arguments as default job name like in
   -display-error-file
 
@@ -271,15 +287,22 @@ Conclusion/Summary?
 - C-j is not skipping to `,' whith default command (from second line
   onwards)!
 
-- removing/renaming abort file?
+- removing/renaming/checking abort file?
+
+- Are characters behind unique commands shorter than 4 characters
+  possible? No
+  /sol(u) sufficient? Yes
+  condensed input line ($) behind commands without arguments possible? Yes
+  have a look in -variable-defining-commands!  Warn when - unintentionally -
+  arguments are used for Ansys commands which do not allow arguments.
+  Or implement some auto-newline feature?  But problematic in
+  condensed command lines or when applying code comments!
 
 - undocumented ask parameter
 
 - mode-line-format nil);no mode line for this buffer Unambiguous
 
 - Emacs: old-style backquotes?  used in the old template macro system
-
-- create is only completed by *end
 
 - completion of function names: cursor should end within parentheses
 
@@ -340,9 +363,6 @@ Conclusion/Summary?
   sluggish -> compiliation
 
 - Enable choice for /show,3d or x11 (-start-graphics)
-
-- generalise -insert-pi in code line ($ PI=...), in comment (\n
-  Pi=...)
 
 ** Ansys syntax restrictions not (yet) accounted for
 - *set parameter strings may only be 32 character long!
