--- a/trunk/TODO
+++ b/trunk/TODO
@@ -1,45 +1,52 @@
 * Bugs and deficiencies:
-** Parameter help: cm is shadowed by cmblock
+** Closing of blocks and parameter help is not working when keywords
+   are in fact unambiguous but not written out
 
 ** Completion: Functions are not completed with parenthesis (`sin(')
+   try-completion has problems skipping over the parenthesis, maybe
+   another approach checking whether function the adding a pair of ()
 
-** Completion: c*** command is not completed
+** Completion: c*** command is not completed (not in -completions)
     omission in fontification.el: c*** highlighting, harmless?
 
 ** Highlighting: % and & operators in comments 
-
-** M-j: When there is already a `&' in a format command M-j
-   inserts a redundant one
-
-** Closing of blocks and parameter help is not working when keywords
-   are in fact unambiguous but not written out
 
 ** Highlighting: Experimental user variable highlighting
    does not take into account: a.) a clearing of variables and b.)
    usage of variables before their definitions (uninitialised
    variables) c.) the variable fontification might clash with Ansys
-   specifiers d.) string substitution of %variables% in in strings
-   does not highlight them in the variable font
+   specifiers d.) string substitution of %variables% in strings does
+   not highlight them in the variable face
+
+** M-j: When there is already a `&' in a format command M-j
+   inserts a redundant one
 
 * v12.0.1:
 ** workload
 - bugs
 *** features?
 - insert skeleton with C-c C-s i, send line C-c C-c ccc
+- narrow, outline eblocks, nblocks by default?
 *** miscellaneous
-- rename *LMUtil buffer to *Ansys-license
-
 - update, restructure -mode-help
 
 - TODOs, FIXMEs in the code
 
-- *goto :branch with character labels such as :1 or :_2 possible?
+- /eof after $ working?
 
-- file coding is unix problematic for window systems?
+- default command indentation for */ commands not allowed?
+
+- single asterisk * as comment possible?
+
+- *goto :branch with character labels such as :1 or :_2 possible?
 
 - load or load-file, what happens with compilation and autoload?
 
 - check whether all undocumented commands are still working in v12
+
+- C-c C-c copy whole line (with line-break)?
+
+- file coding is unix, problematic for window systems? seems OK
 
 ** general release procedures
 
@@ -58,7 +65,7 @@ mode-help -- usage & configuration
   profiling, major mode conventions: multiple loading of this
   mode?.
 
-- update Emacs wiki (README), Google Code with download package, home
+- update Emacs wiki (README), Google Code with download packages, home
   page update all version numbers everywhere: Emacs wiki, Google Code
   with download, home page, elpa?
 
@@ -84,13 +91,13 @@ mode-help -- usage & configuration
   sgotthold@cadfem.de,
   sheldonimaoka@yahoo.com,
 
-Subject: Editor support for working with Ansys
+Subject: Editor support for working with Ansys APDL
 
 Hi,
 
-finally another release (12.0.1) of Ansys mode, downloadable from
-		 http://code.google.com/p/ansys-mode
-
+finally another release (12.0.1) of Ansys mode for Emacs, downloadable from
+ http://code.google.com/p/ansys-mode
+below you'll find a list of its features and what's new.
 
 - Emacs package repository, elpa http://tromey.com/elpa/?
 
@@ -104,8 +111,8 @@ finally another release (12.0.1) of Ansys mode, downloadable from
    current OSs.  All bells and whistle of a modern editor (drop file
    into E).  Chosen because with Vim, Emacs is the best editor of all,
    but Especially on Windows Programmed before Microsoft was even
-   founded, Drawbacks of Emacs, need of getting used to it C-c, C-v,
-   C-x, C-y, C-z CUA-mode examples: (setq
+   founded, Drawbacks of Emacs, need of getting used to it: TAB key,
+   C-c, C-v, C-x, C-y, C-z CUA-mode examples: (setq
    scroll-preserve-screen-position t) (delete-selection-mode t)
 
 -- casual APDL file viewer (whetting the appetite)
@@ -120,7 +127,7 @@ finally another release (12.0.1) of Ansys mode, downloadable from
       C-c C-u, C-c C-c
    $ needs space(s)?
    ansys completion and emacs expansion C-c ] -- -close-block
-   ,commands
+   default (,) commands but most */ can't be "*repeated"
    colon loop: e.g.: lfillt,(1:3),(2:4),Rad, lesize,(1:5:2),Esize
    _return & _status values
    preview insert skeletons (alternatively abbrev mode?)
